--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  		<!-- <script src="lines5_izn.js"></script> -->
  		<script src="lines5.js"></script>
         <link rel="stylesheet" href="canvas.css" type="text/css">
-        <title>Color lines 2021</title>
+        <title>LINES Mironovich</title>
 	</head>
 	
 <body>
