--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
-<html>
-     <head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
- 		<!-- <script src="lines5_izn.js"></script> -->
- 		<script src="lines5.js"></script>
-        <link rel="stylesheet" href="canvas.css" type="text/css">
-        <title>LINES Mironovich</title>
-	</head>
-	
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="canvas.css" type="text/css">
+    <title>Color Lines 2021</title>
+    <script src="lines5.js"></script>
+</head>
+
 <body>
-    <div class='maincontecst'>
-        <canvas id="linesMironovich" class="canvas">HTML5 нид, мэн</canvas>
+    <div class='maincontecst' id="maincontecst">
+        <canvas id="ColorLines2021" class="canvas"></canvas>
     </div>
     <script>init(9,9,5);</script>
 </body>
