Изменение меню, добавление музыки, изменение заставки.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="lines5.js"></script>
 </head>
 
-<body>
+<body style='box-sizing: border-box;'>
     <div class='maincontecst' id="maincontecst">
         <canvas id="ColorLines2021" class="canvas"></canvas>
     </div>
