--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="canvas.css" type="text/css">
     <title>Color Lines 2021</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="lines5.js"></script>
 </head>
 
@@ -13,6 +14,11 @@
     <div class='maincontecst' id="maincontecst">
         <canvas id="ColorLines2021" class="canvas"></canvas>
     </div>
-    <script>init(9,9,5);</script>
+    <script>
+        window.onload = function() {
+            // init(9,9,5);
+            createWindowBegin();
+        };
+    </script>
 </body>
 </html>
